--- a/backend/public/docs/theme.yaml
+++ b/backend/public/docs/theme.yaml
@@ -40,33 +40,61 @@ Themes:
               errors: []
               message: Themes retrieved successfully
               data:
-                themes:
-                  - id: 1
-                    name: "Basic White"
-                    slug: "basic-white"
-                    img_preview: "themes/theme-bronze.png"
-                    description: "Tema ini didominasi oleh warna basic putih yang simpel."
-                    price: 150000
-                    created_by: null
-                    updated_by: null
-                    deleted_by: null
-                    package_id: 1
-                    created_at: "2023-10-25T01:28:04.000000Z"
-                    updated_at: "2023-10-25T01:28:04.000000Z"
-                    deleted_at: null
-                  - id: 2
-                    name: "Lego"
-                    slug: "lego"
-                    img_preview: "themes/theme-silver.png"
-                    description: "Tema ini didasarkan pada lego yang membuat suasana menjadi fun."
-                    price: 300000
-                    created_by: null
-                    updated_by: null
-                    deleted_by: null
-                    package_id: 2
-                    created_at: "2023-10-25T01:28:04.000000Z"
-                    updated_at: "2023-10-25T01:28:04.000000Z"
-                    deleted_at: null
+                success: true
+                errors: []
+                message: Themes retrieved successfully
+                data:
+                  themes:
+                    - id: 1
+                      name: Update Theme
+                      slug: update-theme
+                      img_preview: string
+                      description: Desc Update Theme
+                      price: 300000
+                      created_by: null
+                      updated_by: null
+                      deleted_by: null
+                      package_id: 1
+                      created_at: '2023-10-25T03:36:24.000000Z'
+                      updated_at: '2023-11-10T18:57:06.000000Z'
+                      deleted_at: null
+                      package:
+                        id: 1
+                        name: Bronze
+                        price: 'Rp. 100.000'
+                        description: 'Paket yang memenuhi kebutuhan dasar undanganmu'
+                        features: '<li>Informasi Dasar Pernikahan</li>'
+                        created_by: null
+                        updated_by: null
+                        deleted_by: null
+                        created_at: '2023-10-25T03:36:24.000000Z'
+                        updated_at: '2023-10-25T03:36:24.000000Z'
+                        deleted_at: null
+                    - id: 2
+                      name: Lego
+                      slug: lego
+                      img_preview: themes/theme-silver.png
+                      description: 'Tema ini didasarkan pada lego yang membuat suasana menjadi fun.'
+                      price: 300000
+                      created_by: null
+                      updated_by: null
+                      deleted_by: null
+                      package_id: 2
+                      created_at: '2023-10-25T03:36:24.000000Z'
+                      updated_at: '2023-10-25T03:36:24.000000Z'
+                      deleted_at: null
+                      package:
+                        id: 2
+                        name: Silver
+                        price: 'Rp. 300.000'
+                        description: 'Pilihan paket membuat undanganmu lebih keren'
+                        features: '<li>Informasi Dasar Pernikahan</li><li>Gallery</li><li>Konfirmasi Kehadiran</li>'
+                        created_by: null
+                        updated_by: null
+                        deleted_by: null
+                        created_at: '2023-10-25T03:36:24.000000Z'
+                        updated_at: '2023-10-25T03:36:24.000000Z'
+                        deleted_at: null
   post:
     tags:
       - Theme
@@ -140,20 +168,36 @@ Theme_id:
               errors: []
               message: Theme retrieved successfully
               data:
-                theme:
-                  id: 1
-                  name: Basic White
-                  slug: basic-white
-                  img_preview: themes/theme-bronze.png
-                  description: Tema ini didominasi oleh warna basic putih yang simpel.
-                  price: 150000
-                  created_by: null
-                  updated_by: null
-                  deleted_by: null
-                  package_id: 1
-                  created_at: "2023-10-25T03:36:24.000000Z"
-                  updated_at: "2023-10-25T03:36:24.000000Z"
-                  deleted_at: null
+                success: true
+                errors: []
+                message: Theme retrieved successfully
+                data:
+                  theme:
+                    id: 1
+                    name: Update Theme
+                    slug: update-theme
+                    img_preview: string
+                    description: Desc Update Theme
+                    price: 300000
+                    created_by: null
+                    updated_by: null
+                    deleted_by: null
+                    package_id: 1
+                    created_at: '2023-10-25T03:36:24.000000Z'
+                    updated_at: '2023-11-10T18:57:06.000000Z'
+                    deleted_at: null
+                    package:
+                      id: 1
+                      name: Bronze
+                      price: 'Rp. 100.000'
+                      description: 'Paket yang memenuhi kebutuhan dasar undanganmu'
+                      features: '<li>Informasi Dasar Pernikahan</li>'
+                      created_by: null
+                      updated_by: null
+                      deleted_by: null
+                      created_at: '2023-10-25T03:36:24.000000Z'
+                      updated_at: '2023-10-25T03:36:24.000000Z'
+                      deleted_at: null
       '404':
         description: Theme not found
   post:
